# foodshare-web

./: .dockerignore  .env.production.example  .eslintcache  .gitignore  .gitmodules  .mcp.json  .mcp.json.example  .prettierignore  API_MIGRATION_PLAN.md  CLAUDE.md  Dockerfile  GEOCODING_DEPLOYMENT_GUIDE.md  IMPROVEMENT_PLAN.md  MIGRATION_DAY1_README.md  MIGRATION_PLAN_PRODUCTION.md  OPTIMIZATION_SUMMARY.md  README.md  api-usage-audit.json  bunfig.toml  docker-compose.yml  eslint.config.mjs  i18n.ts  jest.config.ts  lefthook.yml  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  supabase  tailwind.config.ts  tsconfig.json  vercel.json
.claude/: mcp.json
blog-backup/: posts.csv  posts.json
commands/: add-dmarc.ts  analyze-cf-dns.ts  check-resend-dns.ts  check-ses-dkim.ts  debug-env.ts  delete-stale-dkim.ts
context/: ADR.md  API_REFERENCE.md  ARCHITECTURE.md  CACHING.md  DATABASE_SCHEMA.md  DEVELOPMENT_GUIDE.md  FEATURES.md  FOLDER_STRUCTURE.md  INDEX.md  PRD.md  REFACTORING_TASKS.md  TECH_STACK.md  WORKFLOWS.md  ultrathink.md
docs/: 00-INDEX.md  EMAIL_WORKERS_SETUP.md  ENTERPRISE_CLIENT_IMPROVEMENT_PLAN.md  GLASS_MIGRATION_GUIDE.md  HEALTH_MONITORING.md  REFACTORING_PLAN.md  SENTRY_INTEGRATION.md  (+1 more)
tools/: Cargo.toml  README.md
tools/src/: main.rs
tools/src/checks/: accessibility.rs  complexity.rs  import_check.rs  large_files.rs  mod.rs  nextjs_security.rs  no_console.rs  project_structure.rs  protected_branch.rs  security.rs  test_coverage.rs
(+1698 files in other folders)
