[package]
name = "lefthook-rs"
version = "0.1.0"
edition = "2021"
description = "Fast git hooks for FoodShare - Rust implementation"
authors = ["FoodShare Team"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
regex = "1.10"
walkdir = "2.4"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "lefthook-rs"
path = "src/main.rs"
